tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else-using-impl.stderr
error: lifetime may not live long enough
  --> $DIR/ex1-return-one-existing-name-if-else-using-impl.rs:11:20
   |
LL |     fn foo<'a>(x: &i32, y: &'a i32) -> &'a i32 {
   |            --     - let's call the lifetime of this reference `'1`
   |            |
   |            lifetime `'a` defined here
LL |
LL |         if x > y { x } else { y }
   |                    ^ associated function was supposed to return data with lifetime `'a` but it is returning data with lifetime `'1`
   |
help: consider reusing a named lifetime parameter and update trait if needed
   |
LL |     fn foo<'a>(x: &'a i32, y: &'a i32) -> &'a i32 {
   |                    ++

error: aborting due to 1 previous error

